# ConsensusCore

./: .gitignore  CHANGELOG.md  Makefile  README.md  bamboo_build.sh  configure  meson.build  meson_options.txt  setup.py
include/: meson.build
include/ConsensusCore/: Checksum.hpp  Coverage.hpp  Feature.hpp  Features.hpp  Interval.hpp  LFloat.hpp  Logging.hpp  Mutation-inl.hpp  Mutation.hpp  Read.hpp  Sequence.hpp  Types.hpp  Utils.hpp  Version.hpp
include/ConsensusCore/Align/: AffineAlignment.hpp  AlignConfig.hpp  LinearAlignment.hpp  PairwiseAlignment.hpp
include/ConsensusCore/Edna/: EdnaConfig.hpp  EdnaCounts.hpp  EdnaEvaluator.hpp
include/ConsensusCore/Matrix/: AbstractMatrix.hpp  DenseMatrix-inl.hpp  DenseMatrix.hpp  SparseMatrix-inl.hpp  SparseMatrix.hpp  SparseVector-inl.hpp  SparseVector.hpp  VectorL.hpp
include/ConsensusCore/Poa/: PoaConsensus.hpp  PoaGraph.hpp  RangeFinder.hpp
include/ConsensusCore/Quiver/: Diploid.hpp  MultiReadMutationScorer.hpp  MutationEnumerator-inl.hpp  MutationEnumerator.hpp  MutationScorer.hpp  QuiverConfig.hpp  QuiverConsensus.hpp  QvEvaluator.hpp  ReadScorer.hpp  SimpleRecursor.hpp  SseRecursor.hpp
include/ConsensusCore/Quiver/detail/: Combiner.hpp  RecursorBase-inl.hpp  RecursorBase.hpp  SseMath.hpp  sse_mathfun.h
include/ConsensusCore/Statistics/: Binomial.hpp
make/: Defs.mk
scripts/ci/: setup.sh
src/: Polish.cpp  meson.build
src/C++/: Checksum.cpp  Coverage.cpp  Feature.cpp  Features.cpp  Mutation.cpp  Read.cpp  Sequence.cpp  Utils.cpp  Version.cpp  meson.build
src/C++/Align/: AffineAlignment.cpp  AlignConfig.cpp  LinearAlignment.cpp  PairwiseAlignment.cpp
src/C++/Edna/: EdnaCounts.cpp
src/C++/Logging/: Logging.cpp
src/C++/Matrix/: DenseMatrix.cpp  SparseMatrix.cpp
src/C++/Poa/: PoaConsensus.cpp  PoaGraph.cpp  PoaGraphImpl.cpp  PoaGraphImpl.hpp  PoaGraphTraversals.cpp  RangeFinder.cpp
src/C++/Quiver/: Diploid.cpp  MultiReadMutationScorer.cpp  MutationEnumerator.cpp  MutationScorer.cpp  QuiverConfig.cpp  QuiverConsensus.cpp  ReadScorer.cpp  SimpleRecursor.cpp  SseRecursor.cpp
src/C++/Quiver/detail/: RecursorBase.cpp
src/C++/Statistics/: Binomial.cpp
src/Demos/: Demo.py
src/SWIG/: meson.build
src/Tests/: MatrixPrinting.hpp  ParameterSettings.cpp  ParameterSettings.hpp  Random.hpp  SseTestingUtils.hpp  TestCoverage.cpp  TestDiploidQuiver.cpp  TestMatrixFacades.cpp  TestMultiReadMutationScorer.cpp  TestMutationEnumerator.cpp  TestMutationScorer.cpp  TestMutations.cpp  TestPairwiseAlignment.cpp  TestPoaConsensus.cpp  TestQvEvaluator.cpp  TestRecursors.cpp  TestSparseVector.cpp  meson.build  test_import.py
tools/: check-formatting  find_boost  format-all
